@@ -1,3 +1,9 @@
+2013-11-12  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/57734
+	* pt.c (lookup_template_class_1): Handle alias template declarations
+	of enumeration types.
+
 2013-11-10  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* cvt.c (cp_convert_to_pointer): Call build_ptrmemfunc before
